# cnn

./: .gitignore  CMakeLists.txt  README.md  backup.txt
include/: activation.h  enum.h  f.h  io.h  layer.h  model.h  mtype.h  nn_ops.h  ops_util.h  parser.h
src/: activation.cpp  arma2opencv.hpp  f.cpp  main.cpp  model.cpp  nn_ops.cpp  ops_util.cpp  parser.cpp
src/layers/: activation.cpp  activation.h  add.cpp  add.h  batch_norm.cpp  batch_norm.h  concatenate.cpp  concatenate.h  conv2d.cpp  conv2d.h  conv2d_transpose.cpp  conv2d_transpose.h  input.cpp  input.h  pool2d.cpp  pool2d.h
src/model_zoo/: u4.cpp  u4.h
